--- a/config.yaml
+++ b/config.yaml
@@ -77,7 +77,7 @@ params:
     showcase:
       - image: pic01.jpg
         subtitle: Ipsum Dolor Sit Amet
-        title: Aliquam
+        title: AboutMe
         url: blogs/aliquam
       - image: pic02.jpg
         subtitle: Feugiat Amet Tempus
