--- a/config.yaml
+++ b/config.yaml
@@ -78,7 +78,7 @@ params:
       - image: pic01.jpg
         subtitle: Ipsum Dolor Sit Amet
         title: AboutMe
-        url: blogs/aliquam
+        url: blogs/roman_vazquez_lorenzo
       - image: pic02.jpg
         subtitle: Feugiat Amet Tempus
         title: Tempus
