--- a/config.yaml
+++ b/config.yaml
@@ -75,7 +75,7 @@ params:
   tiles:
     enable: yes
     showcase:
-      - image: pic01.jpg
+      - image: 2018-08-28 05.26.50 1.jpg
         subtitle: Ipsum Dolor Sit Amet
         title: AboutMe
         url: blogs/roman_vazquez_lorenzo
