--- a/config.yaml
+++ b/config.yaml
@@ -8,8 +8,8 @@ params:
   banner:
     buttonText: Get to know me
     subtitle: 
-      A website created to showcase what I have been up to since the 10th March 2000
-    title: Hi, my name is Román Vázquez Lorenzo
+      A website created to showcase what I have been up to lately!
+      title: Hi, my name is Román Vázquez Lorenzo
   blog: {}
   contact:
     address:
