--- a/config.yaml
+++ b/config.yaml
@@ -16,7 +16,7 @@ params:
       - city: London
         country: UK
         street: Regent's Park
-        title: NW1 4SA
+        title: NW14SA
     buttonClear: Clear
     buttonSend: Send message
     email:
@@ -69,7 +69,7 @@ params:
       - name: Elements
         url: elements.html
     menu: Menu
-    subtitle: By Román
+    subtitle: ByRoman
     title: My Website
   tiles:
     enable: yes
