--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,7 @@ params:
     buttonText: Get to know me
     subtitle: 
       A website created to showcase what I have been up to lately!
-      title: Hi, my name is Román Vázquez Lorenzo
+      title: Hi, my name is Roman Vazquez Lorenzo
   blog: {}
   contact:
     address:
