--- a/config.yaml
+++ b/config.yaml
@@ -49,11 +49,8 @@ params:
       - icon: fa-linkedin
         label: LinkedIn
         url: https://www.linkedin.com/in/roman-vazquez-lorenzo
-      - icon: fa-vsco
-        label: VSCO
-        url: https://vsco.co/rrvll/gallery
   image: ''
-  name: Your name
+  name: Roman
   navigation:
     button1:
       - name: Get Started
@@ -80,7 +77,7 @@ params:
         subtitle: This is where I come from
         title: About me
         url: blogs/roman_vazquez_lorenzo
-      - image: pic02.jpg
+      - image: Sada_boats.jpg
         subtitle: This is where I have been taught what I know
         title: My Education
         url: blogs/tempus
