--- a/config.yaml
+++ b/config.yaml
@@ -88,7 +88,7 @@ params:
       - image: Tech_Report_all.png
         subtitle: Feel free to check them out!
         title: My Projects
-        url: blogs/ipsum
+        url: blogs/myprojects
       - image: Be_Disciplined.jpg
         subtitle: This is where I want to go
         title: My objectives
