--- a/config.yaml
+++ b/config.yaml
@@ -69,7 +69,7 @@ params:
         url: blogs/my_experience
       - name: My Objectives
         url: blogs/my_objectives
-      - name: My Projects
+      - name: ML for AM
         url: blogs/my_projects
       - name: My Resume
         url: blogs/my_resume
